
iconsdir =  $(pkgdatadir)/icons

icons_DATA = about.png \
							button_all.png \
							button_dir.png \
							button_play.png \
							color_sel.png \
							dir_closed_new.png \
							dir_closed.png \
							dir_open_new.png \
							dir_open.png \
							file_nosong.png \
							file_pending2.png \
							file_pending3.png \
							file_pending4.png \
							file_pending.png \
							file_song.png \
							icon_closed_new.png \
							icon_closed.png \
							icon_nosong.png \
							icon_open.png \
							icon_pending.png \
							icon_song.png \
							not_set.png 


EXTRA_DIST = $(icons_DATA)
